cambios al cotizador para envío por correo

--- a/PuntoVentaWeb/appsettings.json
+++ b/PuntoVentaWeb/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5000"
+      }
+    }
+  },
+  "ConnectionStrings": {
+    "Access": "Driver={Microsoft Access Driver (*.mdb, *.accdb)};Dbq=C:\\Jaeger Soft\\Jaeger.accdb;Pwd=75941232;",
+    "SQL": "Server=.\\SQLEXPRESS;Database=PuntoDeVenta;Integrated Security=True;MultipleActiveResultSets=True;"
+  }
 }
