--- a/PuntoVentaWeb/PuntoVentaWeb.csproj
+++ b/PuntoVentaWeb/PuntoVentaWeb.csproj
@@ -1,13 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
-
+    <PropertyGroup>
+        <TargetFramework>net6.0-windows</TargetFramework>
+        <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    </PropertyGroup>
+    
   <ItemGroup>
-    <PackageReference Include="System.Data.OleDb" Version="10.0.2" />
+      <PackageReference Include="QuestPDF" Version="2025.12.3" />
+      <PackageReference Include="System.Data.Odbc" Version="6.0.0" />
+      <PackageReference Include="System.Data.OleDb" Version="6.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
 
