--- a/BRUNO/packages.config
+++ b/BRUNO/packages.config
@@ -1,4 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net48" />
+  <package id="QuestPDF" version="2025.12.3" targetFramework="net48" />
+  <package id="SkiaSharp" version="3.119.1" targetFramework="net48" />
+  <package id="SkiaSharp.NativeAssets.macOS" version="3.119.1" targetFramework="net48" />
+  <package id="SkiaSharp.NativeAssets.Win32" version="3.119.1" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
 </packages>
