--- a/BRUNO/packages.config
+++ b/BRUNO/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle.Cryptography" version="2.6.2" targetFramework="net48" />
+  <package id="iTextSharp" version="5.5.13.5" targetFramework="net48" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net48" />
   <package id="QuestPDF" version="2025.12.3" targetFramework="net48" />
   <package id="SkiaSharp" version="3.119.1" targetFramework="net48" />
