sistema de preventas

--- a/PuntoVentaWeb/PuntoVentaWeb.csproj
+++ b/PuntoVentaWeb/PuntoVentaWeb.csproj
@@ -8,6 +8,8 @@
     </PropertyGroup>
     
   <ItemGroup>
+      <PackageReference Include="BlazorBarcodeScanner.ZXing.JS" Version="1.0.4" />
+      <PackageReference Include="QRCoder" Version="1.7.0" />
       <PackageReference Include="QuestPDF" Version="2025.12.3" />
       <PackageReference Include="System.Data.Odbc" Version="6.0.0" />
       <PackageReference Include="System.Data.OleDb" Version="6.0.0" />
