--- a/PuntoVentaWeb/Properties/launchSettings.json
+++ b/PuntoVentaWeb/Properties/launchSettings.json
@@ -12,7 +12,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7110;http://localhost:5204",
+      "applicationUrl": "https://0.0.0.0:5001;http://0.0.0.0:5000",
+      //"applicationUrl": "https://localhost:7110;http://localhost:5204",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
